[package]
name = "biotite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
walkdir = "2.5.0"
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
percent-encoding = "2.3.2"
